kubernetes/services/yeetus-net/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yeetus-net
  namespace: yeetus-net
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/external: "true"
    gethomepage.dev/group: Websites
    gethomepage.dev/name: Yeetus.net
    gethomepage.dev/icon: mdi-web
    gethomepage.dev/description: Yeetus landing page
    gethomepage.dev/weight: "200"
    gethomepage.dev/siteMonitor: http://yeetus-net.yeetus-net.svc.cluster.local
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - yeetus.net
        - www.yeetus.net
      secretName: yeetus-net-tls
  rules:
    - host: yeetus.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yeetus-net
                port:
                  number: 80
    - host: www.yeetus.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yeetus-net
                port:
                  number: 80
